@@ -1,11 +1,16 @@
 #! /bin/sh
+# $Id$
+# vim:et:ft=sh:sts=2:sw=2
 #
 # Copyright 2008 Kate Ward. All Rights Reserved.
 # Released under the LGPL (GNU Lesser General Public License)
 #
 # Author: kate.ward@forestent.com (Kate Ward)
 #
-# shFlags unit test wrapper
+# shFlags unit test suite runner.
+#
+# This script runs all the unit tests that can be found, and generates a nice
+# report of the tests.
 
 MY_NAME=`basename $0`
 MY_PATH=`dirname $0`
@@ -17,7 +22,8 @@ for test in ${PREFIX}[a-z]*.sh; do
   TESTS="${TESTS} ${test}"
 done
 
-# load test helpers
+# load libraries
+. ../lib/versions
 . ./shflags_test_helpers
 
 usage()
@@ -28,7 +34,7 @@ usage()
 # process command line flags
 while getopts 'e:hs:t:' opt; do
   case ${opt} in
-    e)
+    e)  # set an environment variable
       key=`expr "${OPTARG}" : '\([^=]*\)='`
       val=`expr "${OPTARG}" : '[^=]*=\(.*\)'`
       if [ -z "${key}" -o -z "${val}" ]; then
@@ -39,9 +45,9 @@ while getopts 'e:hs:t:' opt; do
       export ${key}
       env="${env:+${env} }${key}"
       ;;
-    h) usage; exit 0 ;;
-    s) shells=${OPTARG} ;;
-    t) tests=${OPTARG} ;;
+    h) usage; exit 0 ;;  # help output
+    s) shells=${OPTARG} ;;  # list of shells to run
+    t) tests=${OPTARG} ;;  # list of tests to run
     *) usage; exit 1 ;;
   esac
 done
@@ -100,24 +106,10 @@ for shell in ${shells}; do
 EOF
 
   shell_name=`basename ${shell}`
-  case ${shell_name} in
-    bash) echo; ${shell} --version; ;;
-    dash) ;;
-    ksh)
-      version=`${shell} --version exit 2>&1`
-      exitVal=$?
-      if [ ${exitVal} -eq 2 ]; then
-        echo
-        echo "${version}"
-      fi
-      ;;
-    pdksh) ;;
-    zsh)
-      version=`echo 'echo ${ZSH_VERSION}' |${shell}`
-      echo
-      echo "version: ${version}"
-      ;;
-  esac
+  shell_version=`versions_shellVersion "${shell}"`
+
+  echo "shell name: ${shell_name}"
+  echo "shell version: ${shell_version}"
 
   # execute the tests
   for suite in ${tests}; do
@@ -127,5 +119,3 @@ EOF
     ( exec ${shell} ./${suite}; )
   done
 done
-
-# vim:et:ft=sh:sts=2:sw=2
